--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,12 +1,12 @@
 @font-face {
-    font-family: 'SUITE-Regular';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-2@1.0/SUITE-Regular.woff2') format('woff2');
-    font-weight: 700;
-    font-style: normal;
+  font-family: 'SUITE-Regular';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-2@1.0/SUITE-Regular.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
 }
 
 * {
-    font-family: 'SUITE-Regular';
+  font-family: 'SUITE-Regular';
 }
 
 .wrap {
@@ -15,7 +15,7 @@
   width: 100%;
 }
 
-html, body {
+html,body,section {
   margin: 0;
   padding: 0;
 }
@@ -38,27 +38,21 @@ body {
 
 
 #name {
-    color: #fff1b9;
-    font-weight: 500;
-    font-size: 150%;
+  color: #fff1b9;
+  font-weight: 500;
+  font-size: 150%;
 }
 
 .infomation {
   position: relative;
   left: 15vh;
-  margin-bottom: 23x0px;
+  margin-bottom: 23px;
 }
 
 .team-list {
   position: relative;
   text-align: right;
   right: 15vh;
-}
-
-.team-in-title {
-}
-
-.team-description {
 }
 
 .team-list-name-1 {
@@ -90,29 +84,62 @@ body {
   border-radius: 10px;
 }
 
-footer{
+.develop-list-name-1 {
+  font-size: 35px;
+  display: inline;
+  margin-right: 20px;
+  padding: 20px;
+  padding-right: 20px;
+  border: #ffffff;
+  background-color: #343331;
+  border-radius: 10px;
+  position: relative;
+  top: 15px;
+}
+
+.develop-list-name-2 {
+  font-size: 35px;
+  display: inline;
+  padding: 20px;
+  padding-right: 20px;
+  border: #ffffff;
+  background-color: #343331;
+  border-radius: 10px;
+  position: relative;
+  top: 15px;
+}
+
+.development {
+  position: relative;
+  text-align: left;
+  left: 15vh;
+}
+
+footer {
   border-top: 1px solid #e4e4e4;
-  padding:1rem ;
-  margin:5rem 0;
+  padding: 1rem;
+  margin: 20rem 0;
   margin-bottom: 40px;
 }
 
-.footer-message{
+.footer-message {
   font-weight: bold;
-  font-size:0.9rem;
-  color:#545e6f;
-  margin:0 0 0 0.6rem;
+  font-size: 0.9rem;
+  color: #545e6f;
+  margin: 0 0 0 0.6rem;
   align-items: center;
 }
-.footer-contact{
-  font-size:0.9rem;
-  color:#545e6f;
-  margin:0.6rem;
+
+.footer-contact {
+  font-size: 0.9rem;
+  color: #545e6f;
+  margin: 0.6rem;
 }
-.footer-copyright{
-  font-size:0.9rem;
-  color:#545e6f;
-  margin:0.6rem;
+
+.footer-copyright {
+  font-size: 0.9rem;
+  color: #545e6f;
+  margin: 0.6rem;
 }
 
 .inner {
@@ -120,3 +147,17 @@ footer{
   position: relative;
   align-items: center;
 }
+
+.profile_image{
+  margin-top: -90vh;
+  position: relative;
+  top: 80vh;
+}
+
+.contact {
+  position: relative;
+  float: right;
+  right: 15vh;
+  padding-bottom: 40vh;
+}
+
